--- a/app/src/main/res/drawable/grid_item_shape.xml
+++ b/app/src/main/res/drawable/grid_item_shape.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"   >
+    android:shape="rectangle">
 
     <solid
-        android:color="#888888" >
+        android:color="@color/blue_aquamarine" >
     </solid>
 
-    <stroke
-        android:width="2dp"
-        android:color="#C4CDE0" >
-    </stroke>
+<!--    <stroke-->
+<!--        android:width="4dp"-->
+<!--        android:color="@color/blue" >-->
+<!--    </stroke>-->
 
     <padding
         android:left="5dp"
