--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -3,15 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="145dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/shape"
-
+    android:background="@drawable/grid_item_shape"
     android:orientation="vertical">
 
-<!--    <ImageView-->
-<!--        android:id="@+id/image_view"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="130dp"-->
-<!--        android:scaleType="centerCrop" />-->
 
     <TextView
         android:id="@+id/tv_gridItem_title"
@@ -24,7 +18,9 @@
         android:id="@+id/tv_gridItem_city"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
@@ -34,12 +30,15 @@
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:textSize="16sp"
+           android:textSize="18sp"
+           android:textStyle="bold"
            android:text="ul. "/>
        <TextView
            android:id="@+id/tv_gridItem_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
+           android:textStyle="bold"
+           android:textSize="18sp"
            android:textAlignment="center"/>
    </LinearLayout>
     <LinearLayout
@@ -53,17 +52,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="28sp"
+            android:textStyle="bold"
             android:textAlignment="center"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
+            android:textStyle="bold"
             android:text=" of "/>
         <TextView
             android:id="@+id/tv_gridItem_maxRooms"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="28sp"
+            android:textStyle="bold"
             android:textAlignment="center"/>
     </LinearLayout>
 </LinearLayout>
