--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue_deep">#03045E</color>
+    <color name="blue">#023E8A</color>
+    <color name="blue_carolina">#0077B6</color>
+    <color name="cerulean">#0096C7</color>
+    <color name="blue_maya">#00B4D8</color>
+    <color name="blue_baby">#48CAE4</color>
+    <color name="blue_aquamarine">#90E0EF</color>
+    <color name="blue_powder">#ADE8F4</color>
+    <color name="blue_sky_light">#CAF0F8</color>
+    <color name="text_color">#8F8F8F</color>
 </resources>
